--- a/src/views/App.scss
+++ b/src/views/App.scss
@@ -12,7 +12,11 @@ $text-color: #ffffff;
 * {
   outline: none;
   border: none;
-  background-color: #282c34;
+}
+
+.app#root {
+  height: 100%;
+  position: relative;
 }
 
 .App {
@@ -46,21 +50,43 @@ $text-color: #ffffff;
   display: flex;
   color: #333;
   align-items: center;
-  background-color: transparent;
   justify-content: space-between;
 }
 
 .w-20 {
-  width: 30%;
+  width: 35%;
 }
 
-button[type="submit"],
-button[type="button"] {
+button[type="submit"] {
   cursor: pointer;
   margin-right: 15px;
   padding: 10px 25px;
   border-radius: 5px;
-  background-color:#dedede;
+  margin-top: 10px;
+  background-color: #dedede;
+}
+
+button[type="button"]:disabled {
+  padding: 10px 25px;
+  margin-right: 15px;
+  color: #198754;
+  border-radius: 5px;
+  background-color: #ffffff;
+  border: 1.5px solid #198754;
+}
+
+button[type="button"]:enabled {
+  cursor: pointer;
+  color: #ffffff;
+  border-radius: 5px;
+  margin-right: 15px;
+  padding: 10px 25px;
+  background-color: #198754;
+  border: 1.5px solid #198754;
+}
+
+button[type="button"]:enabled i.fa-solid {
+  color: #ffffff;
 }
 
 .form-group {
@@ -74,6 +100,7 @@ button[type="button"] {
 
 .form-control {
   width: 100%;
+  color: #333;
   padding: 10px 15px;
 }
 
@@ -100,11 +127,70 @@ button[type="button"] {
   background-color: #976ff7;
 }
 
-.modal {
-  display: none;
-  position: relative;
+.modal-body {
+  background-color: #f1f1f1;
 }
 
+span{
+  width: 100%;
+}
+
+label {
+  display: block;
+  margin: 5px 0;
+  margin-top: 0;
+}
+
+.modal {
+  top: 0;
+  display: flex;
+  width: 100%;
+  height: 100%;
+  overflow: hidden;
+  position: absolute;
+  align-items: center;
+  justify-content: center;
+  .modal-content {
+    width: 500px;
+    position: absolute;
+    padding: 15px 25px;
+    max-width: 550px;
+    border-radius: 6px;
+    background-color: #f1f1f1;
+    .modal-header {
+      .d-flex {
+        width: 100%;
+        display: flex;
+        p {
+          margin: 0;
+          cursor: pointer;
+          font-size: 1.5rem;
+        }
+      }
+    }
+    .modal-footer {
+      text-align: center;
+    }
+  }
+}
+
+h5.modal-title {
+  margin: 10px 0;
+  color: #333;
+  font-size: 2rem;
+}
+
+input[type="text"],
+input[type="datetime-local"] {
+  width: 96.5555%;
+  border: $border;
+  border-radius: 5px;
+  padding: 10px 8px;
+}
+
+.btn-icon {
+  padding: 6px 10px !important;
+}
 
 @keyframes App-logo-spin {
   from {
@@ -136,29 +222,22 @@ button[type="button"] {
 
 div.text-left {
   text-align: left;
-  background-color: transparent !important;
 }
 
 #list {
   width: 100%;
-  height: 430px;
+  max-height: 450px;
   overflow: auto;
   font-size: 1.2rem;
-  background-color: transparent;
 }
 
 .icon-click {
   color: #0d6efd;
-  background-color: transparent;
 }
 
 .bg-white.flex {
   margin: 10px 0;
   border-radius: 6px;
-}
-
-.remove-edit {
-background-color: transparent
 }
 
 .flex {
@@ -171,8 +250,8 @@ background-color: transparent
 }
 
 p {
-  margin: 10px 5px;
-  background-color: transparent !important;
+  margin: 10px 0;
+  font-size: 1.3rem;
 }
 
 .box-shadow {
@@ -187,12 +266,16 @@ p {
   border-radius: 5px;
 }
 
+.bg-white {
+  background-color: #ffffff !important;
+}
+
 .bg-warning {
   background-color: $bg-warning !important;
 }
 
 .bg-light {
-  background-color: $bg-light !important;
+  background-color: #C672F7 !important;
 }
 
 .bg-primary {
@@ -200,9 +283,30 @@ p {
 }
 
 .bg-success {
-  background-color: $bg-success !important;
+  background-color: $bg-success;
 }
 
-.bg-white {
-  background-color: #ffffff !important;
+
+
+.btn-big {
+  width: 100%;
+  font-size: 1.3rem;
+  padding: 10px 20px !important;
+  margin-top: 15px !important;
+}
+
+.select-fix {
+  width: 100%;
+  color: #333;
+  border: $border;
+  padding: 10px 8px;
+}
+
+.error-message {
+  color: red;
+  display: inline-block;
+}
+
+.has-error {
+  border: 1px solid red;
 }
