--- a/src/views/App.scss
+++ b/src/views/App.scss
@@ -131,7 +131,7 @@ button[type="button"]:enabled i.fa-solid {
   background-color: #f1f1f1;
 }
 
-span{
+span {
   width: 100%;
 }
 
@@ -150,7 +150,7 @@ label {
   position: absolute;
   align-items: center;
   justify-content: center;
-  .modal-content {  
+  .modal-content {
     width: 500px;
     position: absolute;
     padding: 15px 25px;
@@ -162,9 +162,16 @@ label {
         width: 100%;
         display: flex;
         p {
+          &:hover {
+            opacity: 0.5;
+            cursor: pointer;
+          }
+          position: absolute;
           margin: 0;
-          cursor: pointer;
           font-size: 1.5rem;
+          color: #505050;
+          top: -4px;
+          right: 7px;
         }
       }
     }
@@ -275,7 +282,7 @@ p {
 }
 
 .bg-light {
-  background-color: #C672F7 !important;
+  background-color: #c672f7 !important;
 }
 
 .bg-primary {
@@ -286,7 +293,21 @@ p {
   background-color: $bg-success;
 }
 
+.Toastify__close-button > svg {
+  position: relative;
+  fill: currentColor;
+  height: 16px;
+  width: 14px;
+  top: -14px;
+  right: -39px;
+  color: #3333334d !important;
+}
 
+button.Toastify__close-button.Toastify__close-button--light {
+  background-color: transparent;
+  border: none;
+  color: #e4e3e3ee;
+}
 
 .btn-big {
   width: 100%;
